force-app/main/default/objects/Device_Signal__e/Device_Signal__e.object-meta.xml
<CustomObject>
    <label>Device Signal</label>
    <pluralLabel>Device Signals</pluralLabel>
</CustomObject>