force-app/main/default/objects/Device_Signal__e/fields/Alarm_Message__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Message__c</fullName>
    <description>Long form &#39;message&#39; from the device. Could hold a JSON payload to be processed, could be the actual message, etc. Key is that it would require some form of preprocessing before it could be used in declarative logic.</description>
    <label>Alarm Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>