force-app/main/default/objects/Device_Signal__e/fields/AlarmID__c.field-meta.xml
<CustomField>
    <fullName>AlarmID__c</fullName>
    <description>Individual ID for the alarm (used as foreign key for an offsite storage for example)</description>
    <label>AlarmID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>