force-app/main/default/objects/Device_Signal__e/fields/DeviceID__c.field-meta.xml
<CustomField>
    <fullName>DeviceID__c</fullName>
    <description>Identifier to map against assets and find the &#39;device&#39; that sent this signal.</description>
    <label>DeviceID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>