force-app/main/default/objects/Device_Signal__e/fields/Measure_1__c.field-meta.xml
<CustomField>
    <fullName>Measure_1__c</fullName>
    <description>Some measure coming back from the device. CPU temps, outage length, etc etc.</description>
    <label>Measure 1</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>