force-app/main/default/objects/Device_Signal__e/fields/Measure_2__c.field-meta.xml
<CustomField>
    <fullName>Measure_2__c</fullName>
    <description>Some other measurement from the device.</description>
    <label>Measure 2</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>