force-app/main/default/objects/Device_Signal__e/fields/Signal_Emitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Signal_Emitted_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date/time for the signal to have been emitted from the device. This could be slightly different from createdDate on the event if there was a delay, etc. Defaults to NOW()</description>
    <label>Signal Emitted Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>