force-app/main/default/objects/Device_Signal__e/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <description>A general categorization of the &#39;type&#39; of alarm that&#39;s fired. Could be a picklist, could be a category code.</description>
    <label>Signal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>